Contact form update

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Zanele Portfolio</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <title>Zanele Portfolio</title>
+        
         <div class="menu">
             <table>
                 <tr>
@@ -43,7 +44,7 @@
                         <h1>Hi, I am Zanele</h1>
                         <h2>IT Enthusiast</h2>
                     
-                        <br><p>I am passionate, self motivated individual with IT Support Technician,<br>Data Analysis, Cloud Computing experience
+                        <br><p>I am self motivated, passionate, driven individual with IT Support Technician,<br>Data Analysis, Cloud Computing experience
                         ,always keen to apply my<br>skills and also learn new technologies...</p>
                     </td>
                     <td style="padding-right: 20vh; padding-top: 20vh; padding-bottom: 50px;" align="right">
@@ -62,7 +63,7 @@
                 </tr>
                 <tr>
                     <td style="padding-left: 20vh;">
-                        <a class="foot" href = "https://www.linkedin.com/in/zanele-shebi-b83980131" style="color: rgb(158, 114, 4);">LinkedIn</a>
+                        <a class="foot" href = "https://www.linkedin.com/in/zanele-shebi-b83980131">LinkedIn</a>
                     </td>
                 </tr>
             </table>
