--- a/about.html
+++ b/about.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="eng">
-    <title>About Me</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <title>About Me</title>
+        
+        <div class="menu">
+            <table>
+                <tr>
+                    <td colspan="2">
+                        <a href="#">
+                        <h1>Zanele</h1>
+                        </a>
+                     </td> 
+                    <td align="right">
+                        <nav>
+                            <a href="index.html">Home</a>
+                            <a href="about.html">About Me</a>
+                            <a href="contact.html">Contact Me</a>
+                        </nav>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </head>
     <body>
-        <head>
-            <div>
-                <table>
-                    <tr>
-                        <td>
-                            <a href="index.html">
-                            <img src="assets/img/logo.jpg"/>
-                            </a>
-                         </td> 
-                        <td align="right">
-                            <nav>
-                                <a href="index.html">Home</a>
-                                <a href="#">About Me</a>
-                                <a href="contact.html">Contact Me</a>
-                            </nav>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </head>
         <main>
              <h1>About Me</h1>
         </main>
@@ -35,7 +38,7 @@
                 </tr>
                 <tr>
                     <td style="padding-left: 20vh;">
-                        <a href = "https://www.linkedin.com/in/zanele-shebi-b83980131">LinkedIn
+                        <a class="foot" href = "https://www.linkedin.com/in/zanele-shebi-b83980131">LinkedIn
                     </td>
                 </tr>
             </table>
