About me update

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Contact Me</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         
         <div class="menu">
             <table>
@@ -39,19 +40,33 @@
             </div>
         </main>
 
+     </body>
 
-        <div class="footer">
-            <table style="width: 100%;">
+        <footer>
+            <div class="footer">
                 <tr>
-                    <td style="padding-left: 20vh;">Umlazi H, Durban, 4066</td>
-                    <td colspan="2"> My map</td>
-                </tr>
-                <tr>
-                    <td style="padding-left: 20vh;">
-                        <a class="foot" href = "https://www.linkedin.com/in/zanele-shebi-b83980131">LinkedIn
+                    <td>
+                        <h1> Umlazi H, Durban, 4066</h1>
                     </td>
                 </tr>
-            </table>
-        </footer>
-    </body>
+                <tr>
+                    <td colspan="2">
+                        <iframe class="embed-map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3575226.9271210055!2d30.882235599999994!3d-28.944892400000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sza!4v1677141261559!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </td>
+                </tr> 
+                    <section class="icons">
+                        <div class="social">
+                            <a href = "https://www.linkedin.com/in/zanele-shebi-b83980131" target="_blank">
+                                <img src="assets/img/linkedin.png">
+                            </a>
+                            <a href = "https://github.com/Zshebi" target="_blank">
+                                <img src="assets/img/github.png">
+                            </a>
+                            <a href = "https://public.tableau.com/app/profile/zanele.shebi" target="_blank">
+                                <img src="assets/img/tableau-icon.png">
+                            </a>
+                        </div>
+                    </section>
+            </footer>
 </html>
