--- a/index.html
+++ b/index.html
@@ -32,14 +32,10 @@
              <table>
                 <div class="slider">
                     <figure>
-                        <img src="assets/img/pic.jpg">
-                        <img src="assets/img/pic.jpg">
-                        <img src="assets/img/pic.jpg">
-                        <img src="assets/img/pic.jpg">
-                        <!--<img src="assets/img/zahn.png">
-                        <img src="assets/img/me.png">
-                        <img src="assets/img/zert.png">
-                        <img src="assets/img/zahza.png">-->
+                        <img src="assets/img/Diabetes Report.png">
+                        <img src="assets/img/Diabetes Report.png">
+                        <img src="assets/img/Diabetes Report.png">
+                        <img src="assets/img/Diabetes Report.png">
                     </figure>
         
                 </div>
