--- a/index.html
+++ b/index.html
@@ -32,14 +32,10 @@
              <table>
                 <div class="slider">
                     <figure>
-                        <img src="assets/img/pic.jpg">
-                        <img src="assets/img/pic.jpg">
-                        <img src="assets/img/pic.jpg">
-                        <img src="assets/img/pic.jpg">
-                        <!--<img src="assets/img/zahn.png">
-                        <img src="assets/img/me.png">
-                        <img src="assets/img/zert.png">
-                        <img src="assets/img/zahza.png">-->
+                        <img src="assets/img/Diabetes Report.png">
+                        <img src="assets/img/Diabetes Report.png">
+                        <img src="assets/img/Diabetes Report.png">
+                        <img src="assets/img/Diabetes Report.png">
                     </figure>
         
                 </div>
@@ -72,7 +68,7 @@
                     </tr>-->
                     <tr>
                         <td colspan="2">
-                            <iframe class="embed-map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3575226.9271210055!2d30.882235599999994!3d-28.944892400000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sza!4v1677141261559!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                            <iframe class="embed-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27657.5870103261!2d30.853336310377994!3d-29.944972056019083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef65495c7ad9b37%3A0x9fe89ef1d604cd39!2sUmlazi%20H%2C%20Umlazi%2C%204148!5e0!3m2!1sen!2sza!4v1678334696761!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </td>
                     </tr>
@@ -92,5 +88,5 @@
                     </section>
                 </table>
             </div>        
-            </footer>
+           </footer>
     </html>
